objects/CHC_Summary__c.object
<CustomObject>
    <description>Object to hold the summary records per account for the CHC report</description>
    <fields>
        <fullName>Average_Per_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Speed (Average per month x 18)</description>
        <inlineHelpText>Speed (Average per month x 18)</inlineHelpText>
        <label>Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHC_Level__c</fullName>
        <description>Indicates display text for CHC trip status</description>
        <formula>IF(ISPICKVAL(Trip_Win_Level__c ,&quot;BRONZE&quot;), &quot;BRONZE&quot;, 
IF(ISPICKVAL(Trip_Win_Level__c,&quot;SILVER&quot;), &quot;SILVER&quot;,  
IF(ISPICKVAL(Trip_Win_Level__c, &quot;GOLD&quot;) , &quot;GOLD&quot;,
IF(Double_or_95_000_Pts_Gold__c = &quot;DOUBLE GOLD&quot;, &quot;DOUBLE GOLD&quot;,
IF(Double_or_95_000_Pts_Gold__c = &quot;TOTAL PTS GOLD&quot;, &quot;TOTAL PTS GOLD&quot;,
IF( X47_500_Pts_with_Growth_Gold__c = &quot;TOTAL PTS GOLD&quot;, &quot;TOTAL PTS GOLD&quot;,
&quot;&quot;))))))</formula>
        <inlineHelpText>This is the text that is shown to the Community user for CHC trip status</inlineHelpText>
        <label>CHC Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Growth__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Performance minus Base</description>
        <inlineHelpText>Performance minus Base</inlineHelpText>
        <label>Current Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Double_or_95_000_Pts_Gold__c</fullName>
        <description>If value is present, values include be DOUBLE  GOLD or TOTAL PTS GOLD from CHC Report</description>
        <label>Double or 95,000 Pts Gold</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_FD_1_Account__c</fullName>
        <description>The parent account in the FD 1 hierarchy the summary is associated to</description>
        <inlineHelpText>The parent account in the FD 1 hierarchy the summary is associated to</inlineHelpText>
        <label>Parent FD 1 Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CHC Summaries</relationshipLabel>
        <relationshipName>CHC_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points_for_Bronze__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total points needed for Bronze trip level</description>
        <inlineHelpText>Total points needed for Bronze trip level</inlineHelpText>
        <label>Points for Bronze</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_for_Gold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total points needed for Gold trip level</description>
        <inlineHelpText>Total points needed for Gold trip level</inlineHelpText>
        <label>Points for Gold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_for_Silver__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total points needed for Silver trip level</description>
        <inlineHelpText>Total points needed for Silver trip level</inlineHelpText>
        <label>Points for Silver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Date__c</fullName>
        <description>The date the summary information is recorded</description>
        <inlineHelpText>The date the summary information is recorded</inlineHelpText>
        <label>Summary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Base_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total or minimum base points for the account</description>
        <inlineHelpText>The total or minimum base points for the account</inlineHelpText>
        <label>Total Base Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Performance_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total performance points for the account</description>
        <inlineHelpText>The total performance points for the account</inlineHelpText>
        <label>Total Performance Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trip_Win_Level__c</fullName>
        <description>Bronze, Silver, or Gold</description>
        <inlineHelpText>Bronze, Silver, or Gold</inlineHelpText>
        <label>Trip Win Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRONZE</fullName>
                </value>
                <value>
                    <fullName>SILVER</fullName>
                </value>
                <value>
                    <fullName>GOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_FD_1_Parent_Account__c</fullName>
        <description>Indicates the top level parent in the FD1 hierarchy that the summary values will rollup to.</description>
        <formula>IF( Parent_FD_1_Account__r.Is_FD1_Ultimate_Parent__c, Parent_FD_1_Account__c, Parent_FD_1_Account__r.Ultimate_FD_1_Parent_Account__c )</formula>
        <inlineHelpText>Indicates the top level parent in the FD1 hierarchy that the summary values will rollup to.</inlineHelpText>
        <label>Ultimate FD 1 Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X47_500_Pts_with_Growth_Gold__c</fullName>
        <description>If value is present, value should be TOTAL PTS GOLD from CHC Report</description>
        <label>47,500 Pts with Growth Gold</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CHC Summary</label>
    <nameField>
        <displayFormat>CHC-{0000}</displayFormat>
        <label>CHC Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CHC Summary</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>CHC Trip Summary Information</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>